<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">slave</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    
    <string name="master_name">Control panel</string>
    <string name="slave_name">Remote terminal</string>
    
    <string name="res_low">320x240</string>
    <string name="res_medium">640x480</string>
    <string name="res_high">1280x720</string>

    <string name="msg_idle">Select video size, press Start to begin</string> 
    <string name="msg_start_error">Can not start http server..</string>
    <string name="msg_prepare_waiting">Checking camera ..</string>
    <string name="msg_prepare_ok">Camera is OK. Using browser access: </string>
    <string name="msg_prepare_error1">Your phone do not support MP4+AMR_BN format, please exit by menu.</string>
    <string name="msg_prepare_error2">Prepareing is error, please try again.</string>
    <string name="msg_streaming">Do streaming</string>
    
    <string name="Remote_Terminal_Info_TextView">Remote terminal mode</string>
    <string name="Remote_Terminal_name">Remote terminal</string>
    <string name="Remote_Terminal_GPS">GPS: </string>
    <string name="Remote_GPS_info">no info!</string>
    <string name="Remote_GPS_info_TURN_OFF">GPS service is turned off!</string>
    <string name="Remote_State_GPS_ON">GPS ON:</string>
    <string name="Remote_State_GPS_OFF">GPS OFF:</string>
    <string name="Remote_terminal_Network_state">Connection_On</string>
    <string name="Remote_Terminal_Stop">Stop remote</string>
    <string name="Remote_Terminal_Start">Start remote</string>
    <string name="RCV_INFO">RCV_INFO</string>
    <string name="RCV_servo_angle_display">RCV_servo_angle:</string>
    <string name="RCV_servo_angle">no info</string>
    <string name="RCV_motor_speed_display">RCV_motor_speed:</string>
    <string name="RCV_motor_speed">no info</string>
    <string name="Control_Terminal">Control_Terminal</string>
    <string name="Remote_Terminal">Remote_Terminal</string>
    <string name="TextView1">Welcome to our App-Console center</string>
    <string name="Exit">Exit</string>
    <string name="Control_left">Left</string>
    <string name="Control_right">Right</string>
    <string name="Control_SpeedUp">Spd_up</string>
    <string name="Control_SpeedDown">Spd_dn</string>
    <string name="startBlueTooth">startBlueTooth</string>
    <string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
	<string name="alert_dialog_yes">Yes</string>
	<string name="alert_dialog_no">No</string>
	<string name="alert_dialog_warning_title">Warning</string>
	<string name="alert_dialog_ok">Ok</string>
	<string name="alert_dialog_turn_on_bt">This application needs the Bluetooth. Do you want turn on?</string>

    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect device</string>
    <string name="disconnect">Disconnect device</string>
    <string name="preferences">Preferences</string>    
    <string name="special_keys">Special keys</string>
    
    <!-- Preference dialog -->
    <string name="general_preferences">General</string>

    <string name="title_localhecho_preference">Local echo</string>
    <string name="summary_localecho_preference">Display the key strokes</string>
    
    <string name="text_preferences">Text</string>

    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>

    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>

    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>

    <string name="title_document_key_press">Press</string>
    <string name="title_document_key_rest">and Key</string>

   <!-- Don't localize these default values -->
   <string name="default_value_localecho_preference">false</string>
   <string name="default_value_fontsize_preference">10</string>
   <string name="default_value_color_preference">2</string>
   <string name="default_value_controlkey_preference">0</string>

</resources>

