<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <Button
        android:id="@+id/btn_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_play"
        android:layout_alignBottom="@+id/btn_play"
        android:layout_alignRight="@+id/myvideoView"
        android:layout_marginRight="0dp"
        android:text="Capture" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myvideoView"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:text="play" />

    <VideoView
        android:id="@+id/myvideoView"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/Control_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_play"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="59dp"
        android:text="@string/Control_left" />

    <Button
        android:id="@+id/Control_Right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Control_Left"
        android:layout_alignBottom="@+id/Control_Left"
        android:layout_alignParentRight="true"
        android:text="@string/Control_right" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="reset" />

    <Button
        android:id="@+id/Control_SpeedUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Control_Right"
        android:layout_alignLeft="@+id/reset"
        android:text="@string/Control_SpeedUp" />

    <Button
        android:id="@+id/Control_SpeedDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reset"
        android:layout_below="@+id/Control_Right"
        android:text="@string/Control_SpeedDown" />

</RelativeLayout>
